# TMPTIKTOKAPP

./: .env  .env.example  Dockerfile  PRIVACY.md  README.md  TERMS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: config.py  logging.py  security.py
app/db/: models.py
app/db/migrations/: README.md  env.py
app/integrations/: http.py  tiktok_client.py
app/middleware/: errors.py  observability.py  security.py
app/routers/: __init__.py  auth.py  content.py  display.py  videos.py  web.py
app/schemas/: tiktok.py
app/services/: content.py  display.py  oauth.py  tiktok_client.py  tokens.py
app/static/: app.js  styles.css
app/templates/: index.html
tests/: README.md  test_content.py  test_display.py  test_oauth.py
web/: app.js  index.html  styles.css
