[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holover-app"
version = "0.1.0"
description = "FastAPI backend integrating TikTok APIs"
authors = [{ name = "Holover", email = "dev@holover.app" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "python-multipart>=0.0.9",
  "psycopg[binary,pool]>=3.2.1",
  "SQLAlchemy>=2.0.31",
  "alembic>=1.13.2",
  "cryptography>=43.0.0",
  "orjson>=3.10.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "types-requests"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[tool.ruff]
line-length = 100
target-version = "py310"
